# power-dev

./: INSTALL.md  README.md  compare_plots.py  setup.py
.github/: CODEOWNERS  sync.yml
.github/workflows/: cpp.yaml  format.yml  inference_power_workflow.yaml  python.yaml  python_compliance.yaml  sync.yml  update_checksums.yml
client_server/: Makefile  README.md  client.cpp  client.h  clientConfigParser.cpp  clientConfigParser.h  clientServerParserLib.cpp  clientServerParserLib.h  configExample.json  configExample.txt  maxAmpsVoltsParser.h  server.cpp  serverConfigParser.h
client_server/client/: CMakeLists.txt  client.cpp  client.h  clientConfig.json  cpLoadgenFiles.py  getMaxValues.py
client_server/clientConfigParserHelper/: clientConfigParser.cpp  clientConfigParser.h
client_server/clientServerParserLib/: clientServerParserLib.cpp  clientServerParserLib.h
client_server/interacting_with_process/: interacting_with_process.cpp  interacting_with_process.h
client_server/json.h/: json.h
client_server/maxValues/: maxAmpsVoltsParser.cpp  maxAmpsVoltsParser.h
client_server/sending_file/: sending_file.cpp  sending_file.h
client_server/server/: CMakeLists.txt  getMaxValues.py  server.cpp  server.h  serverConfig.json
client_server/serverConfigParserHelper/: serverConfigExample.json  serverConfigParser.cpp  serverConfigParser.h
compliance/: README.md  check.py  checker.py  ci.sh  sources_checksums.json
compliance/helper/: update_sources_checksum.py
power_meter_sampling/: README.md  do_yokogawa.sh  sample_metrics.py
power_meter_sampling/samplers/: yokogawa.json.example  yokogawa.py
ptd_client_server/: README.md  ci.sh  client.py  lib.py  server.py  server.template.conf
ptd_client_server/doc/: sequence.puml
ptd_client_server/lib/: client.py  common.py  server.py  source_hashes.py  summary.py  time_sync.py
ptd_client_server/logs_example/2020-12-23_10-24-04_loadgen-testing/: spl.txt
ptd_client_server/logs_example/2020-12-23_10-24-04_loadgen-testing/ssdmobilenet/: mlperf_log_summary.txt
ptd_client_server/logs_example/2020-12-23_10-28-22_loadgen-ranging/: spl.txt
ptd_client_server/logs_example/2020-12-23_10-28-22_loadgen-ranging/ssdmobilenet/: mlperf_log_summary.txt
ptd_client_server/tests/unit/: test_server.py  test_source_hashes.py
